--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h1>Mi portafolio</h1>
             <div>
                 <a href="#about">About</a>
+                <a href="#technologies">Technologies</a>
                 <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
             </div>
@@ -32,10 +33,143 @@
                 </p>
             </div>
         </section>
-
         <section id="projects" class="projects">
             <h2>Mis Projectos</h2>
             <div class="project-grid" id="projectGrid"></div>
+        </section>
+
+        <section id="tecnologias" class="tecnologias">
+            <h2>Tecnologías & Habilidades</h2>
+            <div class="tech-container">
+                <div class="tech-category">
+                    <h3>Desarrollo Backend</h3>
+                    <div class="tech-list">
+                        <div class="tech-item">
+                            <div class="tech-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg>
+                            </div>
+                            <span class="tech-name">FastAPI</span>
+                            <span class="tech-level">Intermedio</span>
+                        </div>
+                        <div class="tech-item">
+                            <div class="tech-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 3h-4a2 2 0 0 1-2 2v4a2 2 0 0 1-2 2h-4a2 2 0 0 1-2-2v-4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v4a2 2 0 0 1 2 2h4a2 2 0 0 1 2-2v-4a2 2 0 0 1-2-2z"></path></svg>
+                            </div>
+                            <span class="tech-name">Flask</span>
+                            <span class="tech-level">Intermedio</span>
+                        </div>
+                        <div class="tech-item">
+                            <div class="tech-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="3" width="20" height="18" rx="2"></rect><path d="M12 7v10"></path><path d="M8 11h8"></path></svg>
+                            </div>
+                            <span class="tech-name">SQL</span>
+                            <span class="tech-level">Intermedio</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="tech-category">
+                    <h3>Lenguajes de Programación</h3>
+                    <div class="tech-list">
+                        <div class="tech-item">
+                            <div class="tech-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 19c-4.3 0-7.8-3.5-7.8-7.8S7.7 3.4 12 3.4s7.8 3.5 7.8 7.8-3.5 7.8-7.8 7.8z"></path><path d="M12 15.1c-1.9 0-3.5-1.6-3.5-3.5s1.6-3.5 3.5-3.5 3.5 1.6 3.5 3.5-1.6 3.5-3.5 3.5z"></path></svg>
+                            </div>
+                            <span class="tech-name">Python</span>
+                            <span class="tech-level">Avanzado</span>
+                        </div>
+                        <div class="tech-item">
+                            <div class="tech-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 18l6-6-6-6"></path><path d="M8 6l-6 6 6 6"></path></svg>
+                            </div>
+                            <span class="tech-name">JavaScript</span>
+                            <span class="tech-level">Basico</span>
+                        </div>
+                        <div class="tech-item">
+                            <div class="tech-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 3a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3 3 3 0 0 0 3-3 3 3 0 0 0-3-3H6a3 3 0 0 0-3 3 3 3 0 0 0 3 3 3 3 0 0 0 3-3V6a3 3 0 0 0-3-3 3 3 0 0 0-3 3 3 3 0 0 0 3 3h12a3 3 0 0 0 3-3 3 3 0 0 0-3-3z"></path></svg>
+                            </div>
+                            <span class="tech-name">Dart</span>
+                            <span class="tech-level">Basico</span>
+                        </div>
+                        <div class="tech-item">
+                            <div class="tech-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 18l6-6-6-6"></path><path d="M8 6l-6 6 6 6"></path></svg>
+                            </div>
+                            <span class="tech-name">C</span>
+                            <span class="tech-level">Intermedio</span>
+                        </div>
+                    </div>
+                </div>
+        
+                <div class="tech-category">
+                    <h3>Desarrollo Frontend</h3>
+                    <div class="tech-list">
+                        <div class="tech-item">
+                            <div class="tech-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon></svg>
+                            </div>
+                            <span class="tech-name">CSS</span>
+                            <span class="tech-level">Basico</span>
+                        </div>
+                        <div class="tech-item">
+                            <div class="tech-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 3a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3 3 3 0 0 0 3-3 3 3 0 0 0-3-3H6a3 3 0 0 0-3 3 3 3 0 0 0 3 3 3 3 0 0 0 3-3V6a3 3 0 0 0-3-3 3 3 0 0 0-3 3 3 3 0 0 0 3 3h12a3 3 0 0 0 3-3 3 3 0 0 0-3-3z"></path></svg>
+                            </div>
+                            <span class="tech-name">Flutter</span>
+                            <span class="tech-level">Basico</span>
+                        </div>
+                        <div class="tech-item">
+                            <div class="tech-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 4l-2 14.5l-6 2l-6-2L4 4"></path><path d="M15.5 8h-7l.5 4h6l-.5 3.5l-2.5.75l-2.5-.75l-.1-.5"></path></svg>
+                            </div>
+                            <span class="tech-name">HTML</span>
+                            <span class="tech-level">Basico</span>
+                        </div>
+                        <div class="tech-item">
+                            <div class="tech-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
+                            </div>
+                            <span class="tech-name">PyQt5</span>
+                            <span class="tech-level">Basico</span>
+                        </div>
+                    </div>
+                </div>
+        
+                <div class="tech-category">
+                    <h3>Herramientas & Otros</h3>
+                    <div class="tech-list">
+                        <div class="tech-item">
+                            <div class="tech-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"></path><path d="M9 18c-4.51 2-5-2-7-2"></path></svg>
+                            </div>
+                            <span class="tech-name">Git</span>
+                            <span class="tech-level">Intermedio</span>
+                        </div>
+                        <div class="tech-item">
+                            <div class="tech-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 2v2c0 4.418-4.871 8-11 8-4.418 0-8-3.582-8-8v-2"></path><path d="M21 2"></path><path d="M5 2v2c0 4.418 4.871 8 11 8 4.418 0 8-3.582 8-8v-2"></path><path d="M5 2"></path></svg>
+                            </div>
+                            <span class="tech-name">Docker</span>
+                            <span class="tech-level">Basico</span>
+                        </div>
+                        <div class="tech-item">
+                            <div class="tech-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="3" width="20" height="18" rx="2" ry="2"></rect><line x1="8" y1="21" x2="16" y2="21"></line><line x1="12" y1="17" x2="12" y2="21"></line></svg>
+                            </div>
+                            <span class="tech-name">Linux</span>
+                            <span class="tech-level">Intermedio</span>
+                        </div>
+                        <div class="tech-item">
+                            <div class="tech-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 0 0-9-9 9 9 0 0 0-9 9"></path><polyline points="3 12 3 15 6 15"></polyline><polyline points="21 12 21 15 18 15"></polyline></svg>
+                            </div>
+                            <span class="tech-name">API Integration</span>
+                            <span class="tech-level">Intermedio</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -47,6 +181,9 @@
             </a>
             <a href="https://www.linkedin.com/in/marcos-bustos-7327962ab/" target="_blank" rel="noopener noreferrer">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-4 0v7H10v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+            </a>
+            <a href="img/marcossbustoss.pdf" target="_blank" rel="noopener noreferrer" download>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><line x1="8" y1="12" x2="16" y2="12"></line></svg>
             </a>
         </div>
         <p class="copyright">&copy; 2024 Markbusking. All rights reserved.</p>
