responsive y ver projectos

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Markbusking</title>
+    <title>Markbusking - Portafolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,34 +11,35 @@
         <nav>
             <h1>Mi portafolio</h1>
             <div>
-                <a href="#about">About</a>
-                <a href="#technologies">Technologies</a>
-                <a href="#projects">Projects</a>
-                <a href="#contact">Contact</a>
+                <a href="#about">Sobre mí</a>
+                <a href="#technologies">Tecnologías</a>
+                <a href="#projects">Proyectos</a>
+                <a href="#contact">Contacto</a>
             </div>
         </nav>
     </header>
 
     <main>
         <section class="hero">
-            <h2>Bienvenidos soy Markbusking</h2>
-            <p>Convirtiendo ideas en soluciones elegantes a traves del codigo</p>
+            <h2>Bienvenidos, soy Markbusking</h2>
+            <p>Convirtiendo ideas en soluciones elegantes a través del código</p>
         </section>
 
+        
         <section id="about" class="about">
             <div class="about-content">
-                <h2>Sobre mi</h2>
+                <h2>Sobre mí</h2>
                 <p>
-                    Mi nombre es Marcos Bustos, Soy un programador backend, especializado en Python. Como apasionado por la tecnología y el aprendizaje continuo, siempre estoy en búsqueda de nuevas formas de mejorar mis habilidades y enfrentar desafíos que me permitan crecer. Aunque mi experiencia es reciente, tengo un enfoque dedicado en crear soluciones eficientes y escalables. Estoy emocionado por las oportunidades que el mundo del desarrollo tiene para ofrecer y por aprender más cada día.
+                    Mi nombre es Marcos Bustos. Soy un programador backend, especializado en Python. Como apasionado por la tecnología y el aprendizaje continuo, siempre estoy en búsqueda de nuevas formas de mejorar mis habilidades y enfrentar desafíos que me permitan crecer. Aunque mi experiencia es reciente, tengo un enfoque dedicado en crear soluciones eficientes y escalables. Estoy emocionado por las oportunidades que el mundo del desarrollo tiene para ofrecer y por aprender más cada día.
                 </p>
             </div>
         </section>
+        
         <section id="projects" class="projects">
             <h2>Mis Projectos</h2>
             <div class="project-grid" id="projectGrid"></div>
         </section>
-
-        <section id="tecnologias" class="tecnologias">
+        <section id="technologies" class="technologies">
             <h2>Tecnologías & Habilidades</h2>
             <div class="tech-container">
                 <div class="tech-category">
@@ -174,19 +175,19 @@
     </main>
 
     <footer id="contact">
-        <h2>Contactame</h2>
+        <h2>Contáctame</h2>
         <div class="social-links">
-            <a href="https://github.com/markbus-ai" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/markbus-ai" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
             </a>
-            <a href="https://www.linkedin.com/in/marcos-bustos-7327962ab/" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.linkedin.com/in/marcos-bustos-7327962ab/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-4 0v7H10v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
             </a>
-            <a href="img/marcossbustoss.pdf" target="_blank" rel="noopener noreferrer" download>
+            <a href="img/marcossbustoss.pdf" target="_blank" rel="noopener noreferrer" download aria-label="Descargar CV">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><line x1="8" y1="12" x2="16" y2="12"></line></svg>
             </a>
         </div>
-        <p class="copyright">&copy; 2024 Markbusking. All rights reserved.</p>
+        <p class="copyright">&copy; 2024 Markbusking. Todos los derechos reservados.</p>
     </footer>
 
     <div id="myModal" class="modal">
