--- a/index.html
+++ b/index.html
@@ -228,14 +228,14 @@
                 <div class="timeline-item">
                     <div class="timeline-date">2023</div>
                     <div class="timeline-content">
-                        <h3>Programación Backend</h3>
+                        <h3>Programación</h3>
                         <p>CFP 403</p>
                         <ul>
-                            <li>Desarrollo de APIs y servicios web</li>
-                            <li>Python, FastAPI, Flask</li>
-                            <li>Bases de datos SQL</li>
-                            <li>Arquitectura de software</li>
-                            <li>Patrones de diseño</li>
+                            <li>Desarrollo de aplicaciones de escritorio</li>
+                            <li>Python, Tkinter</li>
+                            <li>Bases de datos SQL (MySQL, SQLite)</li>
+                            <li>Programación en C</li>
+                            <li>Fundamentos de algoritmos y estructuras de datos</li>
                         </ul>
                     </div>
                 </div>
