Add experience section with timeline and educational details

--- a/index.html
+++ b/index.html
@@ -211,6 +211,36 @@
             <h2>Mi Trayectoria</h2>
             <div class="timeline">
                 <div class="timeline-item">
+                    <div class="timeline-date">2025</div>
+                    <div class="timeline-content">
+                        <h3>Tecnicatura en desarrollo de software</h3>
+                        <p>ISFT 204</p>
+                        <ul>
+                            <li>Fundamentos de programación</li>
+                            <li>Desarrollo web y móvil</li>
+                            <li>Bases de datos y SQL</li>
+                            <li>Metodologías ágiles</li>
+                            <li>Análisis y diseño de sistemas</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline">
+                    <div class="timeline-item">
+                        <div class="timeline-date">2025</div>
+                        <div class="timeline-content">
+                            <h3>Ingles para tecnologia 1</h3>
+                            <p>CFP 403</p>
+                            <ul>
+                                <li>Comprensión y producción oral</li>
+                                <li>Vocabulario técnico</li>
+                                <li>Lectura de documentación</li>
+                                <li>Redacción técnica</li>
+                                <li>Comunicación profesional</li>
+                            </ul>
+                        </div>
+                    </div>
+            <div class="timeline">
+                <div class="timeline-item">
                     <div class="timeline-date">2023</div>
                     <div class="timeline-content">
                         <h3>Testing De Aplicaciones</h3>
