Add educational experience to the timeline section

--- a/index.html
+++ b/index.html
@@ -209,6 +209,20 @@
         <!-- Experience section -->
         <section id="experience" class="experience">
             <h2>Mi Trayectoria</h2>
+
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-date">2025 - Actualidad</div>
+                    <div class="timeline-content">
+                        <h3>Tecnicatura en Desarrollo de Software</h3>
+                        <p>ISFT 204 · Mar del Plata</p>
+                        <ul>
+                            <li>Carrera de 3 años con título oficial</li>
+                            <li>Cursada bimodal y materiales digitales</li>
+                            <li>Materias: Programación, Bases de datos, Sistemas operativos, Diseño web, Proyectos</li>
+                        </ul>
+                    </div>
+                </div>
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-date">2025</div>
